--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-dom": "^19.2.1",
     "@google/genai": "^1.30.0",
     "lucide-react": "^0.555.0",
-    "recharts": "^3.5.1",
-    "uuid": "^13.0.0"
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
