--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "salão-online-mvp",
+  "name": "agende-+",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,7 +13,8 @@
     "react-dom": "^19.2.1",
     "@google/genai": "^1.30.0",
     "lucide-react": "^0.555.0",
-    "recharts": "^3.5.1"
+    "recharts": "^3.5.1",
+    "@supabase/supabase-js": "^2.86.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
